<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drunk Dial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_demo">Demo</string>
    <string name="lbl_set_alarm">Set Alarm</string>
    <string name="lbl_cancel_alarm">Cancel Alarm</string>
    <string name="lbl_password">Enter Password:</string>
    <string name="lbl_alarm">Alarm Time:</string>
    <string name="lbl_add_name">Contact Name:</string>
    <string name="lbl_add_phone">Phone Number:</string>
    <string name="lbl_add_btn_contact">Add Contact</string>
    <string name="btn_lbl_prev">Prev</string>
    <string name="btn_lbl_next">Next</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="title_activity_add_events">AddEvents</string>
    <string name="lbl_menu_save">Save</string>
    <string name="lbl_menu_cancel">Cancel</string>
    <string name="title_activity_display_events">Events</string>
    <string name="lbl_unlock_call">Unlock Contact</string>
    <string name="lbl_stop_alarm">Stop Alarm</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_prev">Prev</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_hospital">Hospital Lists</string>
    <string name="lbl_close">Close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lbl_back">Back</string>
    <string name="title_activity_splash">Splash</string>
    <string name="lbl_valhala">Valhala</string>

</resources>
